--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       type="text/css"
       href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap.min.css"
     />
-    <title>Daftar Mahasiswa</title>
+    <title>Info Ganti Meter</title>
   </head>
   <body">
     <div class="container">
@@ -59,7 +59,7 @@
     <script type="text/javascript">
        $(document).ready(function () {
     $("#example").DataTable({
-      ajax: "https://script.google.com/macros/s/AKfycby3nFpuqRs6UTIIgXGv-JBWqpWj-zCGlBsQZLYwjWE3JiJvjEDp-DB3KgI9vIOoyi2EFg/exec",
+      ajax: "https://script.googleusercontent.com/macros/echo?user_content_key=HPX9KdZJBpZOXzThA_0yd_6Bu8AEVNIv024kyHWCg2Rc6o5teM6Bq3PR5BYt9jIKej6vbtNhqBxLnXFeqt75VIrkRmvapL95m5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnDvefyQn2UsrlI-cwzw4apGYrFHKGwMSDWQBajRTyBIWONotYWOwaVENslOUPZ_B21qICXBa6dqSm7qDBNTNJUdkYMwabFxy9Nz9Jw9Md8uu&lib=MZSNoFu_xnolcyHHihbTYbWdPjFp5afLJ",
       columns: [
       {
           title: "ID",
