--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       ajax: "https://script.googleusercontent.com/macros/echo?user_content_key=HPX9KdZJBpZOXzThA_0yd_6Bu8AEVNIv024kyHWCg2Rc6o5teM6Bq3PR5BYt9jIKej6vbtNhqBxLnXFeqt75VIrkRmvapL95m5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnDvefyQn2UsrlI-cwzw4apGYrFHKGwMSDWQBajRTyBIWONotYWOwaVENslOUPZ_B21qICXBa6dqSm7qDBNTNJUdkYMwabFxy9Nz9Jw9Md8uu&lib=MZSNoFu_xnolcyHHihbTYbWdPjFp5afLJ",
       columns: [
       {
-          title: "ID",
-          data: "Id",
+          title: "ID PEL",
+          data: "id pel",
         },
         {
           title: "NIM",
