--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           data: "id pel",
         },
         {
-          title: "NIM",
-          data: "NIM",
+          title: "MERK METER LAMA",
+          data: "merk meter lama",
         },
         {
           title: "Nama",
