--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h3 class="text-center mb-4">Daftar Mahasiswa</h3>
+          <h3 class="text-center mb-4">Info Ganti Meter</h3>
           <h4 class="text-center mb-4" id="packageName"></h4>
           <br>
           <br>
