--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
           title: "MERK METER LAMA",
           data: "merk meter lama",
         },
+        {
+          title: "TIPE METER LAMA",
+          data: "tipe meter lama",
+        },
        
       ],
       rowId: "nim",
