--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       ajax: "https://script.google.com/macros/s/AKfycbwy9ryFXAR_ToVyvAI407QRBUBRwviXICGblhhrdMMs_DkgonKRee4LjgtUAjQoPmSQ3A/exec",
       columns: [
       {
-          title: "ID PEL",
+          title: "id pel",
           data: "id pel",
         },
         {
