--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        $(document).ready(function () {
     $("#example").DataTable({
       ajax: "https://script.google.com/macros/s/AKfycbwy9ryFXAR_ToVyvAI407QRBUBRwviXICGblhhrdMMs_DkgonKRee4LjgtUAjQoPmSQ3A/exec",
-      data: [
+      column: [
       {
           title: "id pel",
           data: "id pel",
