--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
       type="text/css"
       href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap.min.css"
     />
-    <title>Info Ganti Meter</title>
+    <title>Daftar Mahasiswa</title>
   </head>
   <body">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h3 class="text-center mb-4">Info Ganti Meter</h3>
+          <h3 class="text-center mb-4">Daftar Mahasiswa</h3>
           <h4 class="text-center mb-4" id="packageName"></h4>
+          <br>
+          <br>
+          <a href="input.html" type="button" class="btn btn-primary mt-3 mb-3">+ Tambah Mahasiswa</a>
           <br>
           <br>
           <table
@@ -56,19 +59,23 @@
     <script type="text/javascript">
        $(document).ready(function () {
     $("#example").DataTable({
-      ajax: "https://script.google.com/macros/s/AKfycbwy9ryFXAR_ToVyvAI407QRBUBRwviXICGblhhrdMMs_DkgonKRee4LjgtUAjQoPmSQ3A/exec",
-      coloumn: [
+      ajax: "https://script.google.com/macros/s/AKfycby3nFpuqRs6UTIIgXGv-JBWqpWj-zCGlBsQZLYwjWE3JiJvjEDp-DB3KgI9vIOoyi2EFg/exec",
+      columns: [
       {
-          title: "id pel",
-          data: "id pel",
+          title: "ID",
+          data: "Id",
         },
         {
-          title: "MERK METER LAMA",
-          data: "merk meter lama",
+          title: "NIM",
+          data: "NIM",
         },
         {
-          title: "TIPE METER LAMA",
-          data: "tipe meter lama",
+          title: "Nama",
+          data: "Nama",
+        },
+        {
+          data: "Jurusan",
+          title: "Jurusan",
         },
        
       ],
