--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
       ajax: "https://script.google.com/macros/s/AKfycby3nFpuqRs6UTIIgXGv-JBWqpWj-zCGlBsQZLYwjWE3JiJvjEDp-DB3KgI9vIOoyi2EFg/exec",
       columns: [
       {
-          title: "ID",
+          title: "ID PEL",
           data: "Id",
         },
         {
-          title: "NIM",
-          data: "NIM",
+          title: "NAMA",
+          data: "nama",
         },
         {
-          title: "Nama",
-          data: "Nama",
+          title: "ALAMAT",
+          data: "alamat",
         },
         {
-          data: "Jurusan",
-          title: "Jurusan",
+          data: "MERK METER LAMA",
+          title: "merk meter lama",
         },
        
       ],
