--- a/index.html
+++ b/index.html
@@ -77,6 +77,38 @@
           data: "MERK METER LAMA",
           title: "merk meter lama",
         },
+        {
+          data: "TIPE METER LAMA",
+          title: "tipe meter lama",
+        },
+        {
+          data: "NOMOR METER LAMA",
+          title: "nomor meter lama",
+        },
+        {
+          data: "MERK METER BARU",
+          title: "merk meter baru",
+        },
+        {
+          data: "TIPE METER BARU",
+          title: "tipe meter baru",
+        },
+        {
+          data: "NOMOR METER BARU",
+          title: "nomor meter baru",
+        },
+        {
+          data: "JENIS KENDALA",
+          title: "jenis kendala",
+        },
+        {
+          data: "PETUGAS",
+          title: "petugas",
+        },
+        {
+          data: "KONTAK PETUGAS",
+          title: "kontak petugas",
+        },
        
       ],
       rowId: "id pel",
