--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       columns: [
       {
           title: "ID PEL",
-          data: "Id",
+          data: "id pel",
         },
         {
           title: "NAMA",
