--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
        $(document).ready(function () {
     $("#example").DataTable({
       ajax: "https://script.google.com/macros/s/AKfycbzQ_VwP0tR8t54Mw7JJ6Fjx0jT0yindTh06XbABUTSQ7Ub973ZJmGYY6_xQHxaL8ioYZA/exec",
-      columns: [
+      data: [
       {
           title: "ID PEL",
           data: "id pel",
