merubah isi index.html

--- a/index.html
+++ b/index.html
@@ -1,120 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/fixedheader/3.2.0/css/fixedHeader.bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap.min.css"
-    />
-    <title>Daftar Mahasiswa</title>
-  </head>
-  <body">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h3 class="text-center mb-4">Daftar Mahasiswa</h3>
-          <h4 class="text-center mb-4" id="packageName"></h4>
-          <br>
-          <br>
-          <a href="input.html" type="button" class="btn btn-primary mt-3 mb-3">+ Tambah Mahasiswa</a>
-          <br>
-          <br>
-          <table
-            id="example"
-            class="table table-striped table-bordered mt-2 mb-2"
-            style="width: 100%"
-          ></table>
-          <br />
-          <br />
-          <p id="passingGrade"></p>
-        </div>
-      </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap.min.js"></script>
-    <script src="https://cdn.datatables.net/fixedheader/3.2.0/js/dataTables.fixedHeader.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap.min.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <!-- <script type="text/javascript" src="data.json"></script> -->
-    <script type="text/javascript">
-       $(document).ready(function () {
-    $("#example").DataTable({
-      ajax: "https://script.google.com/macros/s/AKfycbzQ_VwP0tR8t54Mw7JJ6Fjx0jT0yindTh06XbABUTSQ7Ub973ZJmGYY6_xQHxaL8ioYZA/exec",
-      data: [
-      {
-          title: "ID PEL",
-          data: "id pel",
-        },
-        {
-          title: "NAMA",
-          data: "nama",
-        },
-        {
-          title: "ALAMAT",
-          data: "alamat",
-        },
-        {
-          data: "MERK METER LAMA",
-          title: "merk meter lama",
-        },
-        {
-          data: "TIPE METER LAMA",
-          title: "tipe meter lama",
-        },
-        {
-          data: "NOMOR METER LAMA",
-          title: "nomor meter lama",
-        },
-        {
-          data: "MERK METER BARU",
-          title: "merk meter baru",
-        },
-        {
-          data: "TIPE METER BARU",
-          title: "tipe meter baru",
-        },
-        {
-          data: "NOMOR METER BARU",
-          title: "nomor meter baru",
-        },
-        {
-          data: "JENIS KENDALA",
-          title: "jenis kendala",
-        },
-        {
-          data: "PETUGAS",
-          title: "petugas",
-        },
-        {
-          data: "KONTAK PETUGAS",
-          title: "kontak petugas",
-        },
-       
-      ],
-      rowId: "id pel",
-      liveAjax: true,
-    });
-  });
-    </script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Intimeter</title>
+</head>
+<body>
+  <h1>Selamat Malam Ega</h1>
+</body>
 </html>
