--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Intimeter</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Intimeter -- Informasi Ganti Meter</title>
 </head>
 <body>
-  <h1>Selamat Malam Ega</h1>
-  <p>Semangat Bro</p>
+    <!-- Bagian Judul -->
+    <div class="text-center">
+        <h1>INTIMETER</h1>
+        <p>Informasi Ganti Meter -- ULP Bima Kota</p>
+    </div>
+
+    <!-- Bagian Menu Pencarian -->
+    <div class="text-center">
+        <label for="cari" class="form-label">Masukkan Parameter Pencarian Disini !!</label>
+        <div class="row justify-content-center">
+            <div class="col-sm-6">
+                <input type="text" class="form-control" id="cari" placeholder="Masukkan Nomor Meter Lama">
+            </div>
+        </div>
+        <br>
+        <button type="submit" class="btn btn-info" onclick="cari()">Cari</button>
+    </div>
+    <br>
+
+    <!-- Bagian Hasil Pencarian -->
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card text-bg-warning" style="width: 20rem;">
+                    <div class="card-header">
+                      Hasil Pencarian :
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">Id Pel <span id="hasil0" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Nama <span id="hasil1" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Alamat <span id="hasil2" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Merk Meter Lama <span id="hasil3" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Tipe Meter Lama <span id="hasil4" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Nomor Meter Lama <span id="hasil5" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Merk Meter Baru <span id="hasil6" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Tipe Meter Baru <span id="hasil7" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Nomor Meter Baru <span id="hasil8" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Jenis Kendala <span id="hasil9" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Petugas <span id="hasil10" class="fw-bold">--</span></li>
+                      <li class="list-group-item">Kontak Petugas <span id="hasil11" class="fw-bold">--</span></li>
+                    </ul>
+                </div>
+        </div>
+        </div>
+    </div>
+    <script src="script.js">//ini adalah script eksternal</script> 
 </body>
 </html>
